# bit2.one

./: README.md
.github/workflow/: CI.yml
.github/workflows/: CI.yml  test.yml
backend/: .env  .env.example  .env.local  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirments.txt  setup.cfg
backend/base/: asgi.py  settings.py  urls.py  wsgi.py
backend/shortener/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/shortener/migrations/: 0001_initial.py  0002_remove_urls_count_remove_urls_http_url_and_more.py  0003_urls_created_at_urls_updated_at.py  0004_rename_urls_shortener.py  0005_alter_shortener_id.py
backend/templates/: base.html
backend/templates/shortener/: home.html
deploy/: docker-compose.yml
deploy/nginx/: default.conf
frontend/: README.md
